syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.Users";

message User {
    int32 id = 50;
    google.protobuf.Timestamp creationDate = 3;
    google.protobuf.Timestamp modificationDate = 4;
    string userName = 1;
    string email = 2;
    repeated int32 roleIds = 51;
    string firstName = 5;
    string lastName = 6;
}

message UserPageModel {
    repeated User pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}